--- a/src/pages/signin_signup.scss
+++ b/src/pages/signin_signup.scss
@@ -18,6 +18,18 @@
   border-radius: 20px;
   padding: 0 30px;
 }
+.signUpWrapper {
+  min-width: 900px;
+  width: 60vw;
+  height: 75vh;
+  background-color: rgb(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 30px;
+  border-radius: 20px;
+  padding: 0 30px;
+}
 
 .signInLeft {
   flex: 1;
