--- a/src/components/sideBar.scss
+++ b/src/components/sideBar.scss
@@ -50,22 +50,33 @@
     margin: 20px;
     margin-top: 0;
     display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
+    flex-direction: column;
+    // flex-wrap: wrap;
+    // gap: 20px;
 
     .sidebarFollowingPerson {
       display: flex;
-      flex-direction: column;
+      // flex-direction: column;
       align-items: center;
       color: lightgray;
 
       .sidebarFollowingImg {
         margin-top: 10px;
         margin-bottom: 5px;
+        margin-right: 10px;
         width: 50px;
         height: 50px;
         border-radius: 50%;
         object-fit: cover;
+      }
+
+      .sidebarFollowingName {
+        max-width: 130px;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        // word-wrap: break-word;
+        // padding: 20px;
       }
     }
   }
